[tool.poetry]
name = "debiasyn"
version = "0.1.0"
description = "The DebiaSyn Toolbox: Pushing the Boundaries of Information-Theoretic Estimators for Neuroimaging Data"
authors = [{ name = "Juan Carlos Farah", email = "juancarlos.farah@epfl.ch" }]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
